k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-infra-monitor
  labels:
    app: python-infra-monitor
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-infra-monitor
  template:
    metadata:
      labels:
        app: python-infra-monitor
    spec:
      containers:
      - name: python-infra-monitor
        image: rohitar/python-inframonitor:latest
        ports:
        - containerPort: 5001
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
