k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: python-infra-monitor-service
spec:
  type: NodePort
  selector:
    app: python-infra-monitor
  ports:
  - port: 5001
    targetPort: 5001
    nodePort: 30007
